--- a/proApp/package.json
+++ b/proApp/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "proapp",
-  "license": "0BSD",
+  "name": "wrapped",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,13 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/native": "^7.0.2",
-    "@react-navigation/native-stack": "^7.0.2",
-    "expo": "~52.0.6",
-    "expo-linear-gradient": "^14.0.1",
-    "expo-status-bar": "~2.0.0",
-    "react": "18.3.1",
-    "react-native": "0.76.1"
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
+    "@react-native-firebase/auth": "^21.0.0",
+    "@react-native-picker/picker": "^2.8.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
+    "emailjs-com": "^3.2.0",
+    "expo": "^51.0.37",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-status-bar": "^1.12.1",
+    "native-base": "^3.4.28",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.75.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-check-box": "^2.1.7",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-fbsdk-next": "^13.1.3",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-svg": "15.2.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
